# goose-google-calendar-extension

./: .gitignore  GOOSE_DESKTOP_SETUP.md  LICENSE  README.md  TROUBLESHOOTING.md  alternative_configs.toml  example.py  final_verification.py  goose_config.toml  goose_desktop_setup.py  pyproject.toml  requirements.txt  setup_check.py  simple_test.py  verify_setup.py
.github/: copilot-instructions.md
src/goose_calendar/: __init__.py  __main__.py  mcp_server.py  toolkit.py
tests/: test_toolkit.py
